# huskelisteapplikasjon

./: README.md  huskeliste.json  package-lock.json  package.json  server.js
client/: Cargo.toml  Trunk.toml  index.html
client/assets/: index.css
client/src/: main.rs
client/src/components/: todo_item.rs  todo_list.rs
client/src/contexts/: todo_context.rs
client/src/services/: todo.rs
client/src/types/: todo.rs
public/: index.html
server/: .env  Cargo.toml
server/database/: Cargo.toml
server/database/migrations/2023-12-22-081322_create_todos/: up.sql
server/database/src/: get_todos.rs  lib.rs  models.rs  schema.rs
server/src/: main.rs
server/src/features/: todo.rs
src/: App.css  App.js  TodoApp.js  schema.rs
