workspace = { members = ["database"] }
[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["full"] }
database = { path = "database" }
serde = { version = "1.0", features = ["derive"] }
tower = "0.4.13"
